# safety-ai

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  template.py
notebooks/: safety_ai_rf_detr_s.ipynb  safety_ai_yolo26s.ipynb
safetyAI/components/: data_ingestion.py  data_validation.py
safetyAI/constant/training_pipeline/: __init__.py
safetyAI/entity/: artifacts_entity.py  config_entity.py
safetyAI/pipeline/: training_pipeline.py
