[project]
name = "safety-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "from-root>=1.3.0",
    "ipykernel>=7.2.0",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "roboflow>=1.2.16",
    "streamlit>=1.55.0",
    "supervision>=0.27.0.post1",
    "ultralytics>=8.4.19",
]
